--- a/.coveragerc
+++ b/.coveragerc
@@ -5,9 +5,9 @@ source =
 [report]
 exclude_lines = raise NotImplementedError
 
-;omit = */__main__.py
+omit = */__main__.py
 
-fail_under = 90
+fail_under = 100
 
 show_missing = true
 skip_covered = true
