--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,17 @@ jobs:
           name: Run Unit Tests
           command: |
             make test
+
+  pre_deploy:
+    - checkout
+    - run:
+        name: Install Jason
+        command: |
+          make install-dev
+      - run:
+          name: Check For Updates
+          command: .circleci/check_for_updates.sh
+
   deploy:
     docker:
       - image: circleci/python:3.7.3
@@ -35,9 +46,11 @@ workflows:
   build_test_deploy:
     jobs:
       - test
+      - pre_deploy
       - deploy:
           requires:
             - test
+            - pre_deploy
           filters:
             branches:
               only:
