--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,19 @@ jobs:
           command: |
             make test
 
+  pre_deploy:
+    docker:
+      - image: circleci/python:3.7.3
+    steps:
+      - checkout
+      - run:
+          name: Install Jason
+          command: |
+            make install-dev
+      - run:
+          name: Check For Updates
+          command: .circleci/check_for_updates.sh
+
   deploy:
     docker:
       - image: circleci/python:3.7.3
@@ -40,6 +53,7 @@ workflows:
       - deploy:
           requires:
             - test
+            - pre_deploy
           filters:
             branches:
               only:
