--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Create Egg Info
+          command: python3 setup.py egg_info
+      - run:
           name: Check Dependencies
           command: ./scripts/check_dependencies.sh
 
