--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,16 @@
 version: 2
 jobs:
 
+  code-style:
+    docker:
+      - image: circleci/python:3.7.3
+    steps:
+      - checkout
+      - run:
+          name: Check Source Code
+          command: |
+            make lint
+
   unit-test:
     docker:
       - image: circleci/python:3.7.3
@@ -10,10 +20,6 @@ jobs:
           name: Install Jason
           command: |
             make install-dev
-      - run:
-          name: Check Source Code
-          command: |
-            make lint
       - run:
           name: Run Unit Tests
           command: |
@@ -63,9 +69,13 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - unit-test
+      - code-style
+      - unit-test:
+          requires:
+            - code-style
       - feature-test:
           requires:
+            - code-style
             - unit-test
           filters:
             branches:
@@ -74,6 +84,7 @@ workflows:
                 - master
       - deploy:
           requires:
+            - code-style
             - unit-test
             - feature-test
           filters:
