--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install Jason
+          command: |
+            make install-dev
+      - run:
           name: Check Source Code
           command: |
             make lint
