--- a/.coveragerc
+++ b/.coveragerc
@@ -7,6 +7,7 @@ source =
 exclude_lines =
     if __name__ == "__main__":
     raise NotImplementedError
+    raise ImportError
     \.\.\.
 
 ;omit =
